@@ -235,5 +235,5 @@ importFrom(utils,packageDescription)
 importFrom(sfsmisc,QUnif)
 importFrom(Rcpp,evalCpp)
 importFrom(plyr,rbind.fill)
-importFrom(WrightMap,wrightMap)
+# importFrom(WrightMap,wrightMap)
 importFrom(lattice,xyplot)
